--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dev_dependencies:
     sdk: flutter
   get:
   geolocator: ^7.3.1
+  google_maps_flutter: ^2.0.6
+  geoflutterfire:
   
 
 # For information on the generic Dart part of this file, see the
