--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  workmanager: ^0.4.1
 
 dev_dependencies:
   flutter_test:
@@ -35,8 +36,10 @@ dev_dependencies:
   get:
   geolocator: ^7.3.1
   google_maps_flutter: ^2.0.6
-  geoflutterfire:
-  
+  firebase_core: ^1.4.0
+  onesignal_flutter: ^3.1.0
+  cloud_firestore: ^2.4.0
+  firebase_messaging: ^10.0.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
